isar_plus/test/errors/id/missing.dart
// no id property defined

import 'package:isar_plus/isar_plus.dart';

@collection
class Test {
  late int notId;

  late String name;
}
